# lol-crawler

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  INTEGRATION_PLAN.md  LICENSE  PRODUCTION_ROADMAP.md  README.md  SETUP.md
src/: config.rs  lib.rs  main.rs
src/api/: client.rs  endpoints.rs  error.rs  mod.rs
src/crawler/: engine.rs  mod.rs  queue.rs  worker.rs
src/database/: connection.rs  mod.rs  operations.rs  schema.rs
src/models/: database.rs  match_v5.rs  mod.rs  riot.rs
src/rate_limiter/: limiter.rs  mod.rs  token_bucket.rs
tests/: integration_tests.rs
tests/common/: mod.rs
