[package]
name = "lol-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections
indexmap = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Concurrency
dashmap = "5.5"

# URL encoding
urlencoding = "2.1"
